--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,138 @@
-<!doctype html>
+<!DOCTYPE html>
 
 <html lang="en">
-<head>
-  <meta charset="utf-8">
+  <head>
+    <meta charset="utf-8" />
 
-  <title>Gasoline | Portfolio Demo</title>
-  <meta name="description" content="A demo portfolio for Gasoline">
-  <meta name="author" content="CheapSmokes">
+    <title>Gasoline | Portfolio Demo</title>
+    <meta name="description" content="A demo portfolio for Gasoline" />
+    <meta name="author" content="CheapSmokes" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;400;500;600;700&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet" />
 
-  <link rel="stylesheet" href="scss/styles.scss">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
+      crossorigin="anonymous"
+    />
 
-</head>
+    <link rel="stylesheet" href="scss/styles.scss" />
+  </head>
 
-<body>
-    <h2>Test Gasoline</h2>
-  <script src="js/scripts.js"></script>
-</body>
+  <body>
+    <!-- Header -->
+    <div class="container">
+      <div class="row justify-content-center mt-5">
+        <div class="col-lg-2 col-md-3 col-4"><img class="img-fluid gasoline-logo" src="assets/Gasoline+Hero+Logo+White.png" /></div>
+      </div>
+      <div class="row mt-4 justify-content-center">
+        <div class="col-12 text-center">
+          <h2 data-splitting>DEMO PORTFOLIO</h2>
+          <h4>- Best Experienced on Desktop -</h4>
+        </div>
+      </div>
+    </div>
+
+    <!-- Poster Demo -->
+    <div class="container">
+      <div class="row justify-content-center mt-5">
+        <div class="col-12 text-center"><h3>POSTER DESIGN</h3></div>
+      </div>
+      <div class="row justify-content-center mt-3">
+        <div class="col-md-12 text-center"><img class="img-fluid first-poster" src="assets/Highway-Poster.jpg" /></div>
+      </div>
+    </div>
+
+    <!-- Hover Tips -->
+    <div class="container">
+      <div class="row justify-content-center mt-5">
+        <div class="col-12 text-center"><h3>INTERACTIVE DESIGN</h3></div>
+        <div class="col-12 text-center"><h5>Hover over the dots for more information</h5></div>
+      </div>
+      <div class="row justify-content-center mt-3">
+        <div class="col-md-10 text-center">
+          <div class="tool-tip-container">
+            <div class="tooltip-wrapper tip-1">
+              <div class="dot"></div>
+              <div class="label col text-start">
+                <div class="title p-2">Custom Handlebars</div>
+                <div class="price pe-3 ps-3 text-start">$399</div>
+              </div>
+            </div>
+            <div class="tooltip-wrapper tip-2">
+              <div class="dot"></div>
+              <div class="label col text-start">
+                <div class="title p-2">Krator Fairing</div>
+                <div class="price pe-3 ps-3 text-start">$185</div>
+              </div>
+            </div>
+            <div class="tooltip-wrapper tip-3">
+              <div class="dot"></div>
+              <div class="label col text-start">
+                <div class="title p-2">Custom Sissy Bar</div>
+                <div class="price pe-3 ps-3 text-start">$250</div>
+              </div>
+            </div>
+            <div class="tooltip-wrapper tip-4">
+              <div class="dot"></div>
+              <div class="label col text-start">
+                <div class="title p-2">Custom Crash Bar</div>
+                <div class="price pe-3 ps-3 text-start">$350</div>
+              </div>
+            </div>
+            <div class="tooltip-wrapper tip-5">
+              <div class="dot"></div>
+              <div class="label col text-start">
+                <div class="title p-2">FXLRS Rims</div>
+                <div class="price pe-3 ps-3 text-start">$1800</div>
+              </div>
+            </div>
+            <img class="img-fluid" src="assets/ToolTip.jpg" />
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Advert Text -->
+    <div class="container">
+      <div class="row justify-content-center mt-5">
+        <div class="col-12 text-center"><h3>ADVERT COPY WRITING</h3></div>
+      </div>
+      <div class="row justify-content-center mt-3">
+        <div class="col-md-12 text-center"><img class="img-fluid" src="assets/DSC00027.jpg" /></div>
+      </div>
+      <div class="row justify-content-center mt-3">
+        <div class="col-md-8 text-center">
+          <h3>2013 Harley Davidson Forty Eight.</h3>
+          <p>
+            If you know you know…!! This classic sporster is an incredible bike with superb handling and a big cube engine to match! <br>With a 1200cc displacement and high torque
+            motor, this bike is great for open roads and city life riding.
+            <br />This very well looked after example is looking for a new owner it will be sorely missed. It's just has just had the 12k service and ready to ride. Tires are in
+            great shape, front and rear disc rotors (and pads) have all just been replaced, tail tidy with LED indicators. And best of all it has the upgraded Vance and Hines slip
+            on giving it that extra bark that it deserves! - Mini Ape Hangers - Crash bar on the frame - 13500 kms. - 7 Months rego (Registered till May 2021) Priced to sell at
+            $16,000.00 ONO.
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="row justify-content-center mt-5">
+        <div class="col-12 text-center"><h3>INSTAGRAM AD</h3></div>
+      </div>
+      <div class="row justify-content-center mt-3">
+        <div class="col-md-4 text-center"><img class="img-fluid" src="assets/instaad.png" /></div>
+      </div>
+    </div>
+
+    <div class="container">
+        <div class="row justify-content-center mt-5 mb-5">
+          <div class="col-md-4 text-center"><p class="copyright">Copyright &copy; 2020 Cheap Smokes, All Rights Reserved.</p></div>
+        </div>
+      </div>
+
+    <script src="js/scripts.js"></script>
+  </body>
 </html>
