--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="scss/styles.scss" />
   </head>
 
-  <body>
+  <body style="background-image: url('bg.7179e5b7.jpg');">
     <!-- Header -->
     <div class="container">
       <div class="row justify-content-center mt-5">
