--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     />
     <link rel="stylesheet" href="docs/styles.fff92af3.css" />
   </head>
-  <body>
+  <body style="background-image: url('docs/bg.7179e5b7.jpg');">
     <div class="container">
       <div class="justify-content-center mt-5 row">
         <div class="col-4 col-lg-2 col-md-3"><img class="gasoline-logo img-fluid" src="docs/Gasoline+Hero+Logo+White.c4ef868a.png" /></div>
