--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <title>Gasoline | Portfolio Demo</title>
     <meta name="description" content="A demo portfolio for Gasoline" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0,  minimum-scale=1.0">
     <meta name="author" content="CheapSmokes" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;400;500;600;700&display=swap" rel="stylesheet" />
