--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div class="container">
       <div class="justify-content-center mt-5 row">
         <div class="col-12 text-center"><h3>INTERACTIVE DESIGN</h3></div>
-        <div class="col-12 text-center"><h5>Hover over the dots for more information</h5></div>
+        <div class="col-12 text-center"><h5>Hover/touch the dots for more information</h5></div>
       </div>
       <div class="justify-content-center mt-3 row">
         <div class="col-md-10 text-center">
@@ -97,8 +97,8 @@
           <h3>2013 Harley Davidson Forty Eight.</h3>
           <p>
             If you know you know…!! This classic sporster is an incredible bike with superb handling and a big cube engine to match! <br />With a 1200cc displacement and high
-            torque motor, this bike is great for open roads and city life riding. <br />This very well looked after example is looking for a new owner it will be sorely missed.
-            It's just has just had the 12k service and ready to ride. Tires are in great shape, front and rear disc rotors (and pads) have all just been replaced, tail tidy with
+            torque motor, this bike is great for open roads and city life riding. <br />This very well looked after example is looking for a new owner and it will be sorely missed.
+            It has just had a 12k service and ready to ride. Tires are in great shape, front and rear disc rotors (and pads) have all just been replaced, tail tidy with
             LED indicators. And best of all it has the upgraded Vance and Hines slip on giving it that extra bark that it deserves! - Mini Ape Hangers - Crash bar on the frame -
             13500 kms. - 7 Months rego (Registered till May 2021) Priced to sell at $16,000.00 ONO.
           </p>
